# unsupervised-open-domain-french-question-answering

./: .dockerignore  .gitignore  .mega-linter.yml  Dockerfile  Makefile  README.md  checkpoint.dvc  checkpoints.dvc  code_copy.py  config.py  cult_gen.json  data.dvc  docker-compose-local.yml  docker-compose.yml  docker-entrypoint.sh  documents_stores.dvc  exetat-with-context-from-wikipedia-bm25.csv  expense-computation.ipynb  experiments-resulsts.csv  experiments-results.csv  models-predictions-fquad.csv  models-predictions-piaf.csv  models-predictions.csv  models.dvc  mytable.tex  piaf-additional-with-from-wikipedia-bm25.csv  pyproject.toml  requirements.txt  scrapy.cfg  scrapydweb_settings_v10.py  setup.py  spacy_base_config.cfg  spacy_config.cfg  t5_fusion_reader_config.yaml  tex_file.txt  trainer_qa.py  update_dpr_embeddings.py  utils.py  wrong_predictions.csv
.dvc/: config
.github/: rewiew-pr.yaml
.github/workflows/: build_push_image.yml  ci.yml  (+1 more)
data/: .gitignore  processed.dvc  sources.md
docs/: Makefile  conf.py  index.rst  make.bat
faiss_index/: wikipedia-fr.json
notebooks/: Reading_files.ipynb  Reading_pdf_files.ipynb  Text-cleaning.ipynb  Untitled.ipynb  analyze answers.ipynb  analyzing-results.ipynb  bm25-retriever.ipynb  building-qa-dataset.ipynb  building-retrieval-system.ipynb  dense-passage-retriever.ipynb  loading-json-to-huggingface-dataset.ipynb  name-entity-recogniton.ipynb  ner-dataset-generation.ipynb  ner-model-play-with-prodigy-data.ipynb  read_lingala_musics.ipynb  train_lingala_embeddings.ipynb  wikipedia-retiever.ipynb
prodigy_recipes/: prodigy-recipes.py
report/: IDE-config.txt  mega-linter-report.json
results/: four-paragraph-incorect-results-validation.csv  four-paragraph-train-fquad+piaf_test_piaf-additional-with-from-wikipedia-bm25.csv  four-paragraph-train-fquad+piaf_valid.csv  one-paragraph-fquad-valid_valid.csv  one-paragraph-piaf-multi-context_piaf-additional-with-from-wikipedia-bm25.csv  one-paragraph-train-fquad+piaf_valid.csv  one-pragraph-piaf-with-context_piaf-with-multi-context-from-wikipedia-bm25.csv  train-on-squad-with-piaf-test-piaf-additional_piaf-additional-with-from-wikipedia-bm25.csv  two-paragraph-fquad-with-multi-contexts-with-exact-answers_valid.csv  two-paragraph-fquad-with-multi-contexts_valid.csv  two-paragraph-piaf-base-questions_piaf-with-multi-context-from-wikipedia-bm25.csv  two-paragraph-train-fquad+piaf_test_piaf-additional-with-from-wikipedia-bm25.csv  two-paragraph-train-fquad+piaf_valid.csv
src/: options.py  run_spiders.py  scrapy.cfg
(+2351 files in other folders)
